# HOG-Linux

./: CMakeLists.txt  README.md  hog.cpp  integral_histogram.h
test/: runtest.sh  test.hog
